<resources>
    <string name="app_name">AcousticDoc</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="sound_fragment_label">Διάγνωση</string>
    <string name="record_fragment_label">Ηχογράφηση</string>
    <string name="result_fragment_label">Αποτέλεσμα</string>
    <string name="select">Επιλογή Αρχείου</string>
    <string name="play">Αναπαραγωγή</string>
    <string name="pause">Πάυση</string>
    <string name="title">Ο τίτλος του αρχείου είναι</string>
    <string name="type">Τύπος ήχου</string>
    <string name="sound_select">Επιλέξτε αρχείο από το χώρο αποθήκευσης. Διαφορετικά, ηχογραφήστε πατώντας το κουμπί του μικροφώνου</string>
    <string name="record_sound">Ηχογράφηση</string>
    <string name="diagnosis">Διάγνωση</string>
    <string name="breathing">Αναπνοή</string>
    <string name="cough">Βήχας</string>
    <string name="name_input">Πληκτρολογήστε το όνομα του αρχείου.</string>
    <string name="file_name">Όνομα Αρχείου</string>
    <string name="start_recording">Εκκίνηση ηχογράφησης</string>
    <string name="stop_recording">Παύση ηχογράφησης</string>
    <string name="now_recording">Γίνεται ηχογράφηση…</string>
    <string name="about">Σχετικά</string>
    <string name="file_history">Ιστορικό διαγνώσεων</string>
    <string name="select_fragment_label">Επιλογή ήχου</string>
    <string name="results">Το αποτέλεσμα της διάγνωσης</string>
    <string name="healthy">Υγιές</string>
    <string name="unhealthy">Μη υγιές</string>
    <string name="positive_probability">Πιθανότητα υγιούς διάγνωσης:</string>
    <string name="negative_probability">Πιθανότητα μη υγιούς διάγνωσης:</string>


</resources>